Landing and forms pages

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,12 @@
-body {
+@font-face {
+  font-family: 'Manrope';
+  src: local('Manrope'), url(./fonts/Manrope-VariableFont_wght.ttf) format('truetype')
+}
+
+html, body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  height: 100%;
+  font-family: 'Manrope', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -11,3 +17,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
