--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    min-width: 100vw;
 }
 
 .App-logo {
@@ -26,6 +29,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.Body {
+  flex-flow: row wrap;
 }
 
 @keyframes App-logo-spin {
